History
=======

0.1.0b2 - unreleased
--------------------

- Added clear:both to #footer-push style.

0.1.0b1 - 2012/07/28
--------------------

- Initial release