@@ -1,0 +1,19 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+
+<title>Temporarily down for maintenance</title>
+
+</head>
+
+<body>
+
+<h1>Temporarily down for maintenance</h1>
+
+<p>We will be back online shortly.</p>
+
+</body>
+</html>
