@@ -1,7 +1,12 @@
 [pytest]
 addopts =
-    --doctest-modules --doctest-glob='*.txt' --capture=no
-    --cov=kotti_dkbase --cov-report=term-missing
-    --ignore=kotti_dkbase/templates/
-    kotti_dkbase/tests/
+	--doctest-modules --doctest-glob='*.txt' --capture=no
+	--ignore=kotti_dkbase/templates/
+	--strict
+	--pep8
+	kotti_dkbase/
 python_files = test*py
+#pep8ignore = E501 E122 E123 E125 E128 E711
+
+[aliases]
+dev = develop easy_install kotti_dkbase[testing]
